Fix MLProject update Workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: MLflow CI
+name: MLflow CI Skilled
 
 on:
   push:
@@ -14,28 +14,38 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Setup Python
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v4
+      # 2. Setup Miniconda
+      - name: Setup Miniconda
+        uses: conda-incubator/setup-miniconda@v2
         with:
           python-version: 3.12
+          auto-activate-base: true
 
-      # 3. Install dependencies
-      - name: Install dependencies
+      # 3. Create conda environment
+      - name: Create conda environment
         run: |
-          python -m pip install --upgrade pip
-          pip install mlflow scikit-learn pandas numpy
+          conda env create -f MLProject/conda.yaml
+          conda info --envs
+          
+      # 4. Activate environment and install MLflow
+      - name: Activate environment & install MLflow
+        run: |
+          source $(conda info --base)/etc/profile.d/conda.sh
+          conda activate mlflow-env
+          pip install --upgrade mlflow
 
-      # 4. Set MLflow Tracking URI (local)
+      # 5. Set MLflow Tracking URI
       - name: Set MLflow Tracking URI
         run: echo "MLFLOW_TRACKING_URI=mlruns" >> $GITHUB_ENV
 
-      # 5. Run MLflow project
+      # 6. Run MLflow Project
       - name: Run MLflow Project
         run: |
+          source $(conda info --base)/etc/profile.d/conda.sh
+          conda activate mlflow-env
           mlflow run MLProject -P data_path="MLProject/heart_preprocessing/data.clean.csv"
 
-      # 6. Commit artefak model ke GitHub
+      # 7. Commit artefak model ke GitHub
       - name: Commit MLflow artifacts
         run: |
           git config --global user.name "github-actions"
