--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,9 +43,12 @@ jobs:
 
       # 7. Commit artifacts model to GitHub (only if changes exist)
       - name: Commit MLflow artifacts
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           git add MLProject/artifacts
           git diff --cached --quiet || git commit -m "Add MLflow model artifacts [ci skip]"
-          git push
+          git push https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git HEAD:main
+
