--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: MLflow CI
+name: MLflow CI Skilled
 
 on:
   push:
@@ -14,41 +14,38 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Setup Python 3.12
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      # 2. Setup Miniconda
+      - name: Setup Miniconda
+        uses: conda-incubator/setup-miniconda@v2
         with:
           python-version: 3.12
+          auto-activate-base: true
 
-      # 3. Install dependencies
-      - name: Install Python dependencies
+      # 3. Create conda environment
+      - name: Create conda environment
+        run: conda env create -f MLProject/conda.yaml
+
+      # 4. Activate environment & install MLflow
+      - name: Activate env & install MLflow
         run: |
-          python -m pip install --upgrade pip
-          pip install mlflow scikit-learn pandas numpy
+          source $(conda info --base)/etc/profile.d/conda.sh
+          conda activate mlflow-env
+          pip install --upgrade mlflow
 
-      # 4. Set MLflow Tracking URI (local)
+      # 5. Set MLflow tracking URI
       - name: Set MLflow Tracking URI
         run: echo "MLFLOW_TRACKING_URI=mlruns" >> $GITHUB_ENV
-
-      # 5. Create artifacts folder if not exist
-      - name: Ensure artifacts folder exists
-        run: |
-          mkdir -p MLProject/artifacts
-          touch MLProject/artifacts/.gitkeep
 
       # 6. Run MLflow Project
       - name: Run MLflow Project
         run: |
-          mlflow run MLProject --env-manager=local
+          source $(conda info --base)/etc/profile.d/conda.sh
+          conda activate mlflow-env
+          mlflow run MLProject -P data_path="MLProject/heart_preprocessing/data.clean.csv" --env-manager local
 
-      # 7. Commit artifacts model to GitHub (only if changes exist)
-      - name: Commit MLflow artifacts
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
-        run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@github.com"
-          git add MLProject/artifacts
-          git diff --cached --quiet || git commit -m "Add MLflow model artifacts [ci skip]"
-          git push https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git HEAD:main
-
+      # 7. Upload artefak model sebagai GitHub Actions artifact
+      - name: Upload MLflow artefacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: mlflow-artifacts
+          path: MLProject/artifacts
