Fix MLProject orkflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,5 +50,4 @@ jobs:
           git config --global user.email "github-actions@github.com"
           git add MLProject/artifacts
           git diff --cached --quiet || git commit -m "Add MLflow model artifacts [ci skip]"
-          git push https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git HEAD:main
-
+          git push https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git HEAD:ci-artifacts
