--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,45 +10,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout repo
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Setup Python 3.12
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: 3.12
 
-      # 3. Install dependencies
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install mlflow scikit-learn pandas numpy
 
-      # 4. Set MLflow Tracking URI (local)
       - name: Set MLflow Tracking URI
-        run: echo "MLFLOW_TRACKING_URI=mlruns" >> $GITHUB_ENV
+        run: echo "MLFLOW_TRACKING_URI=MLProject/mlruns" >> $GITHUB_ENV
 
-      # 5. Create artifacts folder if not exist
-      - name: Ensure artifacts folder exists
-        run: |
-          mkdir -p MLProject/artifacts
-          touch MLProject/artifacts/.gitkeep
-
-      # 6. Run MLflow Project
       - name: Run MLflow Project
         run: |
-          mlflow run MLProject --env-manager=local
-
-      # 7. Commit artifacts to GitHub
-      - name: Commit MLflow artifacts
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
-        run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@github.com"
-          git add MLProject/artifacts
-          git diff --cached --quiet || git commit -m "Add MLflow model artifacts [ci skip]"
-          git push https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git HEAD:ci-artifacts
-
+          mlflow run MLProject --env-manager=local -P data_path="MLProject/heart_preprocessing/data_clean.csv"
