--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,23 +14,29 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Setup Python
+      # 2. Setup Python 3.12
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: 3.12
 
       # 3. Install dependencies
-      - name: Install dependencies
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install mlflow scikit-learn pandas numpy
 
-      # 4. Set MLflow Tracking URI
+      # 4. Set MLflow Tracking URI (local)
       - name: Set MLflow Tracking URI
         run: echo "MLFLOW_TRACKING_URI=mlruns" >> $GITHUB_ENV
 
-      # 5. Run MLflow Project (INI YANG DINILAI)
+      # 5. Create artifacts folder if not exist
+      - name: Ensure artifacts folder exists
+        run: |
+          mkdir -p MLProject/artifacts
+          touch MLProject/artifacts/.gitkeep
+
+      # 6. Run MLflow Project
       - name: Run MLflow Project
         run: |
           mlflow run MLProject --env-manager=local
